# Diplomski

./: README  TODO.txt  Untitled-1.ipynb  bot_example.py  documenting_changes  environment.yml  for_logging.py  ideas.txt  loss_functions.py  main.py  main_simple_snake.py  parallel_training.py  pyproject.toml  q_logic.py  q_logic_logging.py  q_logic_memory_classes.py  q_logic_refrence  q_logic_schedulers.py  q_logic_simple_snake.py  q_logic_snake  q_logic_univerzalno.py  simple_snake_models.py  simplebot.py  simulacije.py  snake_biljeznica.ipynb  snake_game_models.py  snake_models.py  test_replay_buffer.py  visuals.py
AIBGsnake/: main.py  q_logic_snake.py  simulacije.py  snake_models.py
AIBGsnake/logic/: board.py  collisionHandler.py  spawner.py
level0/acrobot/: acrobot_train.py  model_acrobot.py  q_logic_acrobot.py  simulacije.py
level0/cartpole/: gpt_dqn.py  (+5 more)
logic/: game.py  gameConfig.js  gameConfig.py  player.py
q_logic/: __init__.py  advanced_game_sampling.py  example_q_logic_use_  loss_functions.py  policy_gradient.py  q_logic.py  q_logic_logging.py  q_logic_memory_classes.py  q_logic_parallel.py  q_logic_popravljeno.py  q_logic_pretraining.py  q_logic_schedulers.py  q_logic_univerzalno.py
q_logic.egg-info/: SOURCES.txt  top_level.txt
simple_snake/: main_simple_snake.py  q_logic_simple_snake.py  simple_snake_models.py  simulacije_simple_snake.py
simple_snake_logic/: board.py  player.py
snake_model/: snakeagent1__polyakTrue_gamma0.99_doubleqTrue_priorityTrue_noisynetTruezero_survive_reward_2025-12-05_17-13-00.pt.pt
sutton knjiga/: policy_metode.py
(+49 files in other folders)
